# django_tutorial

./: README.md  pyproject.toml
django_tutorial/: settings.py  urls.py
polls/: admin.py  models.py  tests.py  views.py
polls/migrations/: 0001_initial.py  0002_alter_question_pub_date.py
polls/templates/polls/: index.html
