[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["inna-tuzhikova <inna-tuzhikova@github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "django_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
